--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch *.js"
+    "test": "jest --watch *.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
