--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch *.js",
+    "test": "jest --watchAll *.js",
     "start": "node server.js"
   },
   "keywords": [],
